temp svg overflow fix

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -133,18 +133,25 @@ section
   padding-bottom: var(--side-spacing)
   &-Container
     height: 100%
+    width: 100%
   svg
     height: 100%
+    width: 100%
+    max-width: 100%
+    max-height: 100%
+    object-fit: contain
   svg, path
     color: currentColor
     fill: currentColor
-  &.left
-    justify-content: flex-start
+  &.left svg
+    // justify-content: flex-start
+    object-position: top right
   &.center
     justify-content: center
     .landinggraphicitem-Container, svg
       width: 100%
   &.right
+    border: 1px solid purple
     justify-content: flex-end
 
 .imagelistitem
